[VM][FM7] Revert moving mb61vh010 and hd6844 from src/vm to src/vm/fm7 . [UI][Agar] Delete agar ui support.

--- a/source/src/vm/fm7/CMakeLists.txt
+++ b/source/src/vm/fm7/CMakeLists.txt
@@ -14,6 +14,20 @@ set(VM_FM7_LIB_SRCS
 	fm7.cpp
 )
 
+if(FM77AV_VARIANTS)
+	set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} mb61vh010.cpp)
+endif()
+
+if(BUILD_FM77AV20EX)
+	set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} 	hd6844.cpp)
+elseif(BUILD_FM77AV40)
+	set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} 	hd6844.cpp)
+elseif(BUILD_FM77AV40EX)
+	set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} 	hd6844.cpp)
+elseif(BUILD_FM77AV40SX)
+	set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} 	hd6844.cpp)
+endif()
+
 add_library(vm_fm7
 	${VM_FM7_LIB_SRCS}
 )
