--- a/source/src/res/fm7.rc
+++ b/source/src/res/fm7.rc
@@ -111,21 +111,23 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "Exit",                        ID_EXIT
     END
-    POPUP "FD1"
+    POPUP "FD0"
     BEGIN
         MENUITEM "Insert",                      ID_OPEN_FD1
         MENUITEM "Eject",                       ID_CLOSE_FD1
         MENUITEM SEPARATOR
         MENUITEM "Ignore CRC Errors",           ID_IGNORE_CRC1
+        MENUITEM "Hack:Fast Transfer",          ID_FDD_FAST_TRANSFER1
         MENUITEM SEPARATOR
         MENUITEM "Recent",                      ID_RECENT_FD1
     END
-    POPUP "FD2"
+    POPUP "FD1"
     BEGIN
         MENUITEM "Insert",                      ID_OPEN_FD2
         MENUITEM "Eject",                       ID_CLOSE_FD2
         MENUITEM SEPARATOR
         MENUITEM "Ignore CRC Errors",           ID_IGNORE_CRC2
+        MENUITEM "Hack:Fast Transfer",          ID_FDD_FAST_TRANSFER2
         MENUITEM SEPARATOR
         MENUITEM "Recent",                      ID_RECENT_FD2
     END
@@ -218,6 +220,8 @@ BEGIN
         MENUITEM "200msec",                     ID_SOUND_LATE2
         MENUITEM "300msec",                     ID_SOUND_LATE3
         MENUITEM "400msec",                     ID_SOUND_LATE4
+        MENUITEM SEPARATOR
+        MENUITEM "Stereo sound",                ID_SOUND_MULTIPLE_SPEAKER
         MENUITEM SEPARATOR
         MENUITEM "PSG",                         ID_SOUND_DEVICE_TYPE0
         MENUITEM "PSG+OPN",                     ID_SOUND_DEVICE_TYPE1
