--- a/source/fm77av.vcxproj.filters
+++ b/source/fm77av.vcxproj.filters
@@ -145,6 +145,9 @@
     <ClCompile Include="src\vm\fm7\joystick.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\vm\dummydevice.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common.h">
@@ -265,6 +268,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\res\machine_res.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vm\dummydevice.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
