[VM][FM77AV20EX][FM77AV40][HD6844][DMA] Working with DMA, at least reading from FDC. i.e. PSY-O-Blade.

--- a/source/src/vm/fm7/CMakeLists.txt
+++ b/source/src/vm/fm7/CMakeLists.txt
@@ -18,11 +18,8 @@ if(FM77AV_VARIANTS)
 	set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} mb61vh010.cpp)
 endif()
 
-if(BUILD_FM77AV20)
-	set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} 	hd6844.cpp)
-elseif(BUILD_FM77AV20EX)
-	set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} 	hd6844.cpp)
-elseif(BUILD_FM77AV20SX)
+
+if(BUILD_FM77AV20EX)
 	set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} 	hd6844.cpp)
 elseif(BUILD_FM77AV40)
 	set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} 	hd6844.cpp)
