--- a/source/mz1200.vcxproj
+++ b/source/mz1200.vcxproj
@@ -180,6 +180,7 @@
     <ClCompile Include="src\fileio.cpp" />
     <ClCompile Include="src\vm\and.cpp" />
     <ClCompile Include="src\vm\datarec.cpp" />
+    <ClCompile Include="src\vm\disk.cpp" />
     <ClCompile Include="src\vm\event.cpp" />
     <ClCompile Include="src\vm\i8253.cpp" />
     <ClCompile Include="src\vm\i8255.cpp" />
@@ -187,8 +188,10 @@
     <ClCompile Include="src\vm\mz80k\display.cpp" />
     <ClCompile Include="src\vm\mz80k\keyboard.cpp" />
     <ClCompile Include="src\vm\mz80k\memory.cpp" />
+    <ClCompile Include="src\vm\mz80k\mz80fio.cpp" />
     <ClCompile Include="src\vm\mz80k\mz80k.cpp" />
     <ClCompile Include="src\vm\pcm1bit.cpp" />
+    <ClCompile Include="src\vm\t3444a.cpp" />
     <ClCompile Include="src\vm\z80.cpp" />
     <ClCompile Include="src\win32_debugger.cpp" />
     <ClCompile Include="src\win32_input.cpp" />
@@ -207,6 +210,7 @@
     <ClInclude Include="src\vm\datarec.h" />
     <ClInclude Include="src\vm\debugger.h" />
     <ClInclude Include="src\vm\device.h" />
+    <ClInclude Include="src\vm\disk.h" />
     <ClInclude Include="src\vm\event.h" />
     <ClInclude Include="src\vm\i8253.h" />
     <ClInclude Include="src\vm\i8255.h" />
@@ -214,8 +218,10 @@
     <ClInclude Include="src\vm\mz80k\display.h" />
     <ClInclude Include="src\vm\mz80k\keyboard.h" />
     <ClInclude Include="src\vm\mz80k\memory.h" />
+    <ClInclude Include="src\vm\mz80k\mz80fio.h" />
     <ClInclude Include="src\vm\mz80k\mz80k.h" />
     <ClInclude Include="src\vm\pcm1bit.h" />
+    <ClInclude Include="src\vm\t3444a.h" />
     <ClInclude Include="src\vm\vm.h" />
     <ClInclude Include="src\vm\z80.h" />
   </ItemGroup>
