--- a/source/mz80a.vcxproj
+++ b/source/mz80a.vcxproj
@@ -188,9 +188,9 @@
     <ClCompile Include="src\vm\ls393.cpp" />
     <ClCompile Include="src\vm\mb8877.cpp" />
     <ClCompile Include="src\vm\mz80k\display.cpp" />
-    <ClCompile Include="src\vm\mz80k\floppy.cpp" />
     <ClCompile Include="src\vm\mz80k\keyboard.cpp" />
     <ClCompile Include="src\vm\mz80k\memory.cpp" />
+    <ClCompile Include="src\vm\mz80k\mz80aif.cpp" />
     <ClCompile Include="src\vm\mz80k\mz80k.cpp" />
     <ClCompile Include="src\vm\pcm1bit.cpp" />
     <ClCompile Include="src\vm\z80.cpp" />
@@ -219,9 +219,9 @@
     <ClInclude Include="src\vm\ls393.h" />
     <ClInclude Include="src\vm\mb8877.h" />
     <ClInclude Include="src\vm\mz80k\display.h" />
-    <ClInclude Include="src\vm\mz80k\floppy.h" />
     <ClInclude Include="src\vm\mz80k\keyboard.h" />
     <ClInclude Include="src\vm\mz80k\memory.h" />
+    <ClInclude Include="src\vm\mz80k\mz80aif.h" />
     <ClInclude Include="src\vm\mz80k\mz80k.h" />
     <ClInclude Include="src\vm\pcm1bit.h" />
     <ClInclude Include="src\vm\vm.h" />
