[Build][Win32][MZ1200] Add lacked class.

--- a/source/mz1200.vcxproj.filters
+++ b/source/mz1200.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="src\vm\t3444a.cpp">
       <Filter>Source Files\VM Common Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\vm\io.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common.h">
@@ -187,6 +190,9 @@
     </ClInclude>
     <ClInclude Include="src\vm\disk.h">
       <Filter>Header Files\VM Common Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vm\io.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
