--- a/source/mz1200.vcxproj
+++ b/source/mz1200.vcxproj
@@ -184,6 +184,7 @@
     <ClCompile Include="src\vm\event.cpp" />
     <ClCompile Include="src\vm\i8253.cpp" />
     <ClCompile Include="src\vm\i8255.cpp" />
+    <ClCompile Include="src\vm\io.cpp" />
     <ClCompile Include="src\vm\ls393.cpp" />
     <ClCompile Include="src\vm\mz80k\display.cpp" />
     <ClCompile Include="src\vm\mz80k\keyboard.cpp" />
@@ -214,6 +215,7 @@
     <ClInclude Include="src\vm\event.h" />
     <ClInclude Include="src\vm\i8253.h" />
     <ClInclude Include="src\vm\i8255.h" />
+    <ClInclude Include="src\vm\io.h" />
     <ClInclude Include="src\vm\ls393.h" />
     <ClInclude Include="src\vm\mz80k\display.h" />
     <ClInclude Include="src\vm\mz80k\keyboard.h" />
