--- a/source/pcengine.vcxproj.filters
+++ b/source/pcengine.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="src\vm\pcengine\pcengine.cpp">
       <Filter>Source Files\VM Driver Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\win32_debugger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common.h">
