--- a/source/pcengine.vcxproj
+++ b/source/pcengine.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="src\vm\huc6280.cpp" />
     <ClCompile Include="src\vm\pcengine\pce.cpp" />
     <ClCompile Include="src\vm\pcengine\pcengine.cpp" />
+    <ClCompile Include="src\win32_debugger.cpp" />
     <ClCompile Include="src\win32_input.cpp" />
     <ClCompile Include="src\win32_screen.cpp" />
     <ClCompile Include="src\win32_sound.cpp" />
