[VM][MZ2200][QD] Fix FTBFS. [VM][Qt] Add MZ-2000 .

--- a/source/src/vm/mz2500/CMakeLists.txt
+++ b/source/src/vm/mz2500/CMakeLists.txt
@@ -43,9 +43,9 @@ elseif(BUILD_MZ80B)
 add_library(vm_mz2500 ${MZ80B_SRCS})
 
 elseif(BUILD_MZ2000)
-add_library(vm_mz2500 ${MZ80B_SRCS} quickdisk.cpp mz1m01.cpp)
+add_library(vm_mz2500 ${MZ80B_SRCS}  mz1m01.cpp)
 
 elseif(BUILD_MZ2200)
-add_library(vm_mz2500 ${MZ80B_SRCS}  mz1m01.cpp quickdisk.cpp)
+add_library(vm_mz2500 ${MZ80B_SRCS}  mz1m01.cpp)
 
 endif()
