--- a/source/src/res/fm77.rc
+++ b/source/src/res/fm77.rc
@@ -95,6 +95,7 @@ BEGIN
         MENUITEM "CPU x16",                     ID_CPU_POWER4
         MENUITEM SEPARATOR
         MENUITEM "Cycle Steal",                 ID_DIPSWITCH0
+        MENUITEM "Extra RAM",                   ID_DIPSWITCH1
         MENUITEM SEPARATOR
         MENUITEM "None",                        ID_DEVICE_TYPE0
         MENUITEM "Mouse JS-Port1",              ID_DEVICE_TYPE1
@@ -139,6 +140,11 @@ BEGIN
         MENUITEM "Play",                        ID_PLAY_TAPE
         MENUITEM "Rec",                         ID_REC_TAPE
         MENUITEM "Eject",                       ID_CLOSE_TAPE
+        MENUITEM SEPARATOR
+        MENUITEM "Play Button",                 ID_PLAY_BUTTON
+        MENUITEM "Stop Button",                 ID_STOP_BUTTON
+        MENUITEM "Fast Forward",                ID_FAST_FORWARD
+        MENUITEM "Fast Rewind",                 ID_FAST_REWIND
         MENUITEM SEPARATOR
         MENUITEM "Play Tape Sound",             ID_PLAY_TAPE_SOUND
         MENUITEM "Waveform Shaper",             ID_USE_WAVE_SHAPER
