--- a/source/src/res/pc9801u.rc
+++ b/source/src/res/pc9801u.rc
@@ -198,6 +198,11 @@ BEGIN
         MENUITEM "200msec",                     ID_SOUND_LATE2
         MENUITEM "300msec",                     ID_SOUND_LATE3
         MENUITEM "400msec",                     ID_SOUND_LATE4
+        MENUITEM SEPARATOR
+        MENUITEM "PC-9801-26 (BIOS Enabled)",   ID_SOUND_DEVICE_TYPE0
+        MENUITEM "PC-9801-26 (BIOS Disabled)",  ID_SOUND_DEVICE_TYPE1
+        MENUITEM "PC-9801-14",                  ID_SOUND_DEVICE_TYPE2
+        MENUITEM "None",                        ID_SOUND_DEVICE_TYPE3
     END
     POPUP "Input"
     BEGIN
