[BUILD][Win32][FM7] Update vcxprojs to build SNAPSHOT 20151029-1.

--- a/source/fm7.vcxproj.filters
+++ b/source/fm7.vcxproj.filters
@@ -145,6 +145,9 @@
     <ClCompile Include="src\vm\dummydevice.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\vm\fm7\vram.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common.h">
