--- a/source/fm77av.vcxproj.filters
+++ b/source/fm77av.vcxproj.filters
@@ -151,6 +151,9 @@
     <ClCompile Include="src\vm\beep.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\vm\fm7\vram.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common.h">
